fixed shift bugs

--- a/public/assets/front/report/report.css
+++ b/public/assets/front/report/report.css
@@ -1,3 +1,14 @@
+
+nav{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
+    background-color: #eee;
+    opacity: 0.8;
+    line-height: 3em;
+    padding: 5px 5px 0 5px;
+}
 .remained_cash{
 	color: red;
 	font-size: 2em;
@@ -6,11 +17,56 @@
 .text-danger{
 	color: red;
 }
+main{
+	margin-top: 5em;
+}
+section{
+	background-color: #eee;
+	margin: 20px 0;
+}
+input[type=number]{
+	text-align: right;
+	font-size: 1.2em;
+  	/*transform: scale(0.5);*/
+}
+input[type=submit] {
+	line-height: 1.2em;
+	padding: 8px;
+	background-color: #fff;
+	border-radius: 5px;
+	font-size: 1em;
+	margin-left: 20px;
+}
+select{
+	border :1px solid #eee;
+	font-size: 16px;
+}
+.section_title{
+	background-color: #999;
+	color: #fff;
+	font-weight: bold;
+	padding: 5px;
+}
+.inner_section{
+	padding: 20px;
+}
 .md_sec_title{
 	background-color: #bfbfbf;
 	color: #fff;
 	margin: 10px 0;
 	padding: 5px;
+}
+.float{
+	width: auto;
+	margin: 0;
+}
+.left{
+	float: left;
+	font-weight: bold;
+}
+.right{
+	float: right;
+	color: #000;
 }
 #date select{
 	border: 1px solid #ccc;
@@ -75,14 +131,6 @@ nav select{
 input[type=checkbox] {
 	transform: scale(2);
 	margin: 0 15px;
-}
-input[type=submit] {
-	line-height: 1.2em;
-	padding: 8px;
-	background-color: #fff;
-	border-radius: 5px;
-	font-size: 1em;
-	margin-left: 20px;
 }
 label{
 	background-color: yellow;
